--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
 		<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#000000" />
-		<meta name="3D Print demo" content="Small demo exporting objects for 3D printing" />
+		<meta name="3dprint-demo" content="Small demo exporting objects for 3D printing" />
 		<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 		<!--
 			manifest.json provides metadata used when your web app is installed on a
@@ -21,10 +21,10 @@
 			work correctly both with client-side routing and a non-root public URL.
 			Learn how to configure a non-root public URL by running `npm run build`.
 		-->
-		<!-- Material UI resources -->
+		<!-- Fonts and icons for Material UI -->
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"/>
 		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
-	  	<title>3D Print demo</title>
+	  	<title>Print 3D demo</title>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
